--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "mastodon-api": "^1.3.0",
     "react": "^16.2.0",
+    "react-d3-library": "^1.1.8",
     "react-dom": "^16.2.0",
     "react-json-view": "^1.19.1",
     "react-markdown": "^4.1.0"
