--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "browserify --debug index.js -o public/bundle.js",
-    "watch": "rum public public/bundle.js -p 8000 --  --debug index.js",
+    "build": "browserify --debug index.js -o bundle.js",
+    "watch": "rum . bundle.js -p 8000 --  --debug index.js",
     "fetch": "node fetch.js > sar_statuses.json",
     "fetchtree": "node fetch.js tree > sar_tree.json",
-    "prod": "browserify index.js -o public/bundle.js && uglifyjs public/bundle.js -o public/bundle.js"
+    "prod": "browserify index.js -o bundle.js && uglifyjs bundle.js -o bundle.js"
   },
   "keywords": [],
   "author": "",
