--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "build": "browserify --debug index.js -o bundle.js",
     "watch": "rum . bundle.js -p 8000 --  --debug index.js",
-    "fetch": "node fetch.js > sar_statuses.json",
-    "fetchtree": "node fetch.js tree > sar_tree.json",
+    "fetch": "node fetch.js tree > sar_tree.json",
+    "list": "node fetch list",
     "prod": "browserify index.js -o bundle.js && uglifyjs bundle.js -o bundle.js"
   },
   "keywords": [],
